--- a/list.yaml
+++ b/list.yaml
@@ -2,5 +2,13 @@ message1:
   data: "hello"
   headers:
     title: "hello"
-    icon: "https://em-content.zobj.net/source/apple/391/lotus_1fab7.png"
+    icon: ""
     priority: "5"
+    
+message2:
+  data: "hello2"
+  headers:
+    title: "hi"
+    icon: ""
+    priority: "5"
+    
